# workRest

./: .gitignore  main.spec  pyproject.toml
tests/: test_clock.py
work_rest/: main.py
