[tool.poetry]
name = "work_rest"
version = "0.1.0"
description = ""
authors = ["zhangguofeng <zhangguofeng@idadt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynput = "^1.7.5"
win10toast = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
